<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- 通用 -->
    <string name="my_app_name">IMKBaseDamo</string>
    <string name="action_settings">设置</string>
    <string name="tips_waiting">正在获取数据…</string>
    <string name="unknown_exception">很抱歉, 程序出现了问题.\n日志正在保存,\n请联系我们以获取帮助.</string>
    <string name="press_twice_to_exit">再按一次退出程序</string>
    <string name="go_back">返回</string>

    <!-- 检测更新 -->
    <string name="checkver_fail">检查更新失败</string>
    <string name="update_downloading">程序正在下载更新文件</string>
    <string name="update_download_success">程序更新文件下载完成, 点击安装</string>
    <string name="update_download_fail">程序更新文件下载失败</string>
    <string name="update_no_need">您版本为最新版本, 不需要更新</string>
    <string name="checkver">检查更新</string>
    <string name="update_now">立即升级</string>
    <string name="update_not_now">暂不升级</string>
    <string name="exit_app">退出程序</string>
    <string name="confirm">确定</string>
    <string name="prompt">提示</string>
    <string name="update_percent">0%</string>

    <!-- debug -->
    <string name="service_connected">主服务器[%1$s]</string>
    <string name="network_speed">网速[%1$s]</string>
    <string name="network_wifi">WIFI名[%1$s], 强度[%2$s], RSSI[%3$s]</string>
    <string name="battery_infos">电量[%1$s], 充电[%2$s], 状态[%3$s]</string>
    <string name="datetimes_current">当前时间[</string>
    <string name="datetimes_startup_timestamp">启动时戳[%1$s]</string>

</resources>