<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="500dp"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:background="#99ADD8E6"
        android:orientation="horizontal"
        android:padding="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="调试窗口"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/close_tv"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="×"
            android:textSize="20sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout1"
        android:layout_centerHorizontal="true"
        android:background="#99DDDDDD"
        android:orientation="vertical"
        android:padding="5dp" >

        <TextView
            android:id="@+id/debug_service_connected_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_connected"
            android:textColor="@color/black_50"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/debug_connected_wifi_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/network_wifi"
            android:textColor="@color/black_50"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/debug_network_speed_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/network_speed"
            android:textColor="@color/black_50"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/debug_battery_infos_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/battery_infos"
            android:textColor="@color/black_50"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/datetimes_current"
                android:textColor="@color/black_50"
                android:textSize="20sp" />

            <com.soft2t.imk2tbaseframework.widget.DigitalClock
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black_50"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="]"
                android:textColor="@color/black_50"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/debug_datetimes_startup_timestamp_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/datetimes_startup_timestamp"
            android:textColor="@color/black_50"
            android:textSize="20sp" />
    </LinearLayout>

</RelativeLayout>